# rag-evidence-console

./: .gitignore  pyproject.toml
core/: pipeline.py
core/chunking/: base.py  fixed.py
core/generation/: base.py  llm.py
core/retrieval/: base.py  vector.py
